--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title NMT LMS
         link(href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet")
+        block scripts
     body(class="flex flex-col min-h-screen")
         header.bg-blue-800.text-white
             .container.mx-auto.flex.justify-between.items-center.p-4
